--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "markdown-it": "^8.4.2",
     "markdown-it-footnote": "^3.0.1",
     "vue": "^2.5.21",
