--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^4.0.1",
     "axios": "^0.18.0",
     "markdown-it": "^8.4.2",
     "markdown-it-footnote": "^3.0.1",
-    "vue": "^2.5.21",
+    "vue": "^2.6.7",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.4.2",
+    "vuetify": "^1.5.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -21,9 +22,9 @@
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "eslint": "^5.14.1",
+    "eslint-plugin-vue": "^5.2.2",
+    "vue-template-compiler": "^2.6.7"
   },
   "eslintConfig": {
     "root": true,
