--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue/eslint-config-prettier": "^4.0.1",
     "axios": "^0.18.0",
+    "file-saver": "^2.0.1",
     "markdown-it": "^8.4.2",
     "markdown-it-footnote": "^3.0.1",
     "vue": "^2.6.8",
