--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "dropzone": "^5.5.1",
     "file-saver": "^2.0.1",
     "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.0.2",
     "markdown-it-footnote": "^3.0.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.8",
     "vue-router": "^3.0.1",
+    "vue-social-sharing": "^2.4.2",
     "vuetify": "^1.5.4",
     "vuex": "^3.0.1"
   },
